--- a/src/Product.css
+++ b/src/Product.css
@@ -1,3 +1,43 @@
 .product {
   font-family: "Times New Roman", Times, serif;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  z-index: 1;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  max-height: 400px;
+  min-width: 100px;
+}
+
+.product > img {
+  max-height: 200px;
+  width: 100%;
+  object-fit: contain;
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+
+.product > button {
+  background: #f0c14b;
+  color: black;
+  border: 1px solid;
+  border-radius: 6px;
+  padding: 5px;
+}
+
+.product__info {
+  height: 100px;
+  width: 100%;
+}
+
+.product__price {
+  margin-top: 10px;
+}
+.product__rating {
+  margin-top: 5px;
+  display: flex;
 }
