--- a/src/Header.css
+++ b/src/Header.css
@@ -12,6 +12,9 @@
   object-fit: contain;
   margin: 0 20px;
   height: 80px;
+  border-color: black;
+  border: 5px;
+  border-radius: 50px;
 }
 
 .header__searchIcon {
