adding optional chaining to show user in header, adding payment component, adding onClick event and use history method to route to payment page, using map method mapping via state from checkoutProduct componen in payment for reuseability

--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,9 @@
   max-height: 400px;
   min-width: 100px;
 }
+.product:hover {
+  background-color: yellow;
+}
 
 .product > img {
   max-height: 200px;
