--- a/src/Product.css
+++ b/src/Product.css
@@ -14,6 +14,8 @@
 }
 .product:hover {
   background-color: yellow;
+  -webkit-animation: shake 1s !important;
+  animation: shake 1s !important;
 }
 
 .product > img {
