--- a/src/Payment.css
+++ b/src/Payment.css
@@ -30,3 +30,22 @@
 .payment__items {
   flex: 0.8;
 }
+
+.payment__details > form {
+  max-width: 400px;
+}
+
+.payment__details > h3 {
+  padding-bottom: 20px;
+}
+
+.payment__details > form > div > button {
+  background: #f0c14b;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  font-weight: bolder;
+  margin-top: 10px;
+  color: black;
+}
